pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constObjectMember.pkl
foo = new Dyn {
  const foo = 10
}
